Add the default UMASK value and new handlers for the hardening

--- a/production/roles/common-all/handlers/main.yml
+++ b/production/roles/common-all/handlers/main.yml
@@ -7,3 +7,6 @@
 
 - name: GRUB update
   ansible.builtin.command: grub-mkconfig -o /boot/grub/grub.cfg
+
+- name: Apply sysctl params
+  ansible.builtin.command: sysctl --system
