--- a/production/roles/common-all/templates/hardening-grub.cfg
+++ b/production/roles/common-all/templates/hardening-grub.cfg
@@ -1,1 +1,1 @@
-GRUB_CMDLINE_LINUX_DEFAULT="l1tf=full,force page_poison=on pti=on slab_nomerge=yes slub_debug=FZP spec_store_bypass_disable=seccomp spectre_v2=on mds=full,nosmt mce=0 page_alloc.shuffle=1 rng_core.default_quality=500 ipv6.disable=1 iommu=force"
+GRUB_CMDLINE_LINUX_DEFAULT="l1tf=full,force page_poison=on pti=on slab_nomerge=yes slub_debug=FZP spec_store_bypass_disable=seccomp spectre_v2=on mds=full,nosmt mce=0 page_alloc.shuffle=1 rng_core.default_quality=500 ipv6.disable=1 iommu=force apparmor=1"
