Change the sysctl handler name

--- a/production/roles/common-all/handlers/main.yml
+++ b/production/roles/common-all/handlers/main.yml
@@ -8,5 +8,5 @@
 - name: GRUB update
   ansible.builtin.command: grub-mkconfig -o /boot/grub/grub.cfg
 
-- name: Apply sysctl params
+- name: Apply sysctl values
   ansible.builtin.command: sysctl --system
