--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -7,9 +7,9 @@
     - prometheus-bind-exporter
 
 - name: Installation of db.10.168.192.in-addr.arpa
-  ansible.builtin.template:
-    src: ../templates/db.10.168.192.in-addr.arpa.j2
-    dest: /etc/bind/db.10.168.192.in-addr.arpa
+  ansible.builtin.copy:
+    src: db.10.168.192.in-addr.arpa
+    dest: /etc/bind/
     owner: root
     group: bind
     mode: '0640'
@@ -17,9 +17,9 @@
     - Restart bind9
 
 - name: Installation of db.exo-industries.xyz
-  ansible.builtin.template:
-    src: ../templates/db.exo-industries.xyz.j2
-    dest: /etc/bind/db.exo-industries.xyz
+  ansible.builtin.copy:
+    src: db.exo-industries.xyz
+    dest: /etc/bind/
     owner: root
     group: bind
     mode: '0640'
@@ -27,9 +27,9 @@
     - Restart bind9
 
 - name: Installation of named.conf.local
-  ansible.builtin.template:
-    src: ../secrets/named.conf.local.j2
-    dest: /etc/bind/named.conf.local
+  ansible.builtin.copy:
+    src: named.conf.local
+    dest: /etc/bind/
     owner: root
     group: bind
     mode: '0640'
@@ -37,9 +37,9 @@
     - Restart bind9
 
 - name: Installation of named.conf.options
-  ansible.builtin.template:
-    src: ../templates/named.conf.options.j2
-    dest: /etc/bind/named.conf.options
+  ansible.builtin.copy:
+    src: named.conf.options
+    dest: /etc/bind/
     owner: root
     group: bind
     mode: '0640'
@@ -47,8 +47,8 @@
     - Restart bind9
 
 - name: Installation of TSIG key
-  ansible.builtin.template:
-    src: ../secrets/dns1-dns2.key
+  ansible.builtin.copy:
+    src: dns1-dns2.key
     dest: /etc/bind/
     owner: root
     group: bind
