--- a/production/roles/common-all/tasks/hardening.yml
+++ b/production/roles/common-all/tasks/hardening.yml
@@ -10,7 +10,7 @@
 
 - name: Add new default CMDLINE
   ansible.builtin.copy:
-    src: ../templates/hardening-grub.cfg
+    src: hardening-grub.cfg
     dest: /etc/default/grub.d/
     owner: root
     group: root
@@ -19,7 +19,7 @@
 
 - name: Add new sysctl params
   ansible.builtin.copy:
-    src: ../templates/99-exoindustries-sysctl.conf
+    src: 99-exoindustries-sysctl.conf
     dest: /etc/sysctl.d/
     owner: root
     group: root
@@ -28,7 +28,7 @@
 
 - name: Apply the new default UMASK value
   ansible.builtin.copy:
-    src: ../templates/bash.bashrc
+    src: bash.bashrc
     dest: /etc/bash.bashrc
     owner: root
     group: root
