--- a/production/roles/common-all/tasks/main.yml
+++ b/production/roles/common-all/tasks/main.yml
@@ -78,7 +78,7 @@
 
 - name: Application of the SSH conffile
   ansible.builtin.template:
-    src: sshd_config
+    src: sshd_config.j2
     dest: /etc/ssh/
     owner: root
     group: root
