--- a/production/roles/common-all/tasks/ssh.yml
+++ b/production/roles/common-all/tasks/ssh.yml
@@ -1,35 +1,21 @@
 ---
-- name: "Check port {{ ansible_port }}"
-  wait_for:
-    port: "{{ ansible_port }}"
-    state: "started"
-    host: "{{ inventory_hostname }}"
-    connect_timeout: "5"
-    timeout: "5"
-  delegate_to: "localhost"
-  ignore_errors: "yes"
-  register: ssh_port
-
-
 - name: "Check port 22"
   wait_for:
     port: "22"
     state: "started"
     host: "{{ inventory_hostname }}"
-    connect_timeout: "5"
-    timeout: "5"
+    connect_timeout: "3"
+    timeout: "3"
   delegate_to: "localhost"
   ignore_errors: "yes"
-  register: ssh_port_default
-  when:
-    - ssh_port is defined
-    - ssh_port.state is undefined
+  register: ssh_port
 
 - name: Set SSH port to 22
   set_fact:
     ansible_port: "22"
-  when: ssh_port_default.state is defined
+  when: ssh_port is success
 
 - name: Set SSH port to 51000
   set_fact:
     ansible_port: "51000"
+  when: ssh_port is failed
