--- a/production/roles/nginx/tasks/main.yml
+++ b/production/roles/nginx/tasks/main.yml
@@ -22,8 +22,8 @@
 
 - name: Install the default nginx configuration
   ansible.builtin.template:
-    src: ../templates/nginx.conf.j2
-    dest: /etc/nginx/nginx.conf
+    src: nginx.conf
+    dest: /etc/nginx/
     owner: root
     group: root
     mode: 0644
