--- a/production/roles/reverse-proxy/tasks/main.yml
+++ b/production/roles/reverse-proxy/tasks/main.yml
@@ -13,8 +13,8 @@
 
 - name: Installation of the HAproxy configuration
   ansible.builtin.template:
-    src: ../templates/haproxy.cfg.j2
-    dest: /etc/haproxy/haproxy.cfg
+    src: haproxy.cfg
+    dest: /etc/haproxy/
     owner: root
     group: root
     mode: "0644"
