--- a/production/roles/php-fpm/tasks/main.yml
+++ b/production/roles/php-fpm/tasks/main.yml
@@ -20,15 +20,13 @@
     owner: root
     group: root
     mode: '0644'
-  notify:
-    - Restart php-fpm
+  notify: Restart php-fpm
 
 - name: Add the hardening php.ini file
   ansible.builtin.copy:
-    src: ../templates/php.ini.j2
+    src: php.ini
     dest: /etc/php/{{ php_version }}/fpm/php.ini
     owner: root
     group: root
     mode: "0644"
-  notify:
-    - Restart php-fpm
+  notify: Restart php-fpm
