--- a/production/roles/bind-secondary/tasks/main.yml
+++ b/production/roles/bind-secondary/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set hostname
+  ansible.builtin.hostname:
+    name: "{{ role_name }}"
+
 - name: Installation of bind9 and prometheus-bind-exporter
   ansible.builtin.apt:
     pkg:
