--- a/production/roles/reverse-proxy-docker/tasks/main.yml
+++ b/production/roles/reverse-proxy-docker/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set hostname
+  ansible.builtin.hostname:
+    name: "{{ role_name }}"
+
 - name: Import netbox tasks
   import_tasks: netbox.yml
 
