--- a/production/roles/reverse-proxy/tasks/main.yml
+++ b/production/roles/reverse-proxy/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set hostname
+  ansible.builtin.hostname:
+    name: "{{ role_name }}"
+
 - name: Installation of packages
   ansible.builtin.apt:
     pkg:
