--- a/production/roles/website/tasks/main.yml
+++ b/production/roles/website/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set hostname
+  ansible.builtin.hostname:
+    name: "{{ role_name }}"
+
 - name: Create the website directory
   ansible.builtin.file:
     path: /srv/website
