Show the host before the SSH port checking

--- a/playbooks/roles/common-all/tasks/ssh.yml
+++ b/playbooks/roles/common-all/tasks/ssh.yml
@@ -1,4 +1,8 @@
 ---
+- name: Show the host
+  debug:
+    msg: "The host is {{ inventory_hostname }}"
+
 - name: "Check port 22"
   wait_for:
     port: "22"
